Update skill list

--- a/index.html
+++ b/index.html
@@ -241,19 +241,29 @@
                         <td id="skills-form">
                             <label for="skills-input">Skills:</label><br>
                             <select id="skills-input">
-                                <option value="analysis">Analysis</option>
+                                <option value=""></option>
+                                <option value="awe">Awe</option>
+                                <option value="animal interaction">Animal Interaction</option>
+                                <option value="arcana">Arcana</option>
+                                <option value="athletics">Athletics</option>
+                                <option value="awareness">Awareness</option>
+                                <option value="burglary">Burglary</option>
                                 <option value="concealable weapons">Concealable Weapons</option>
-                                <option value="essence">Essence</option>
-                                <option value="manipulation">Manipulation</option>
-                                <option value="martial weapons">Martial Weapons</option>
+                                <option value="crafting">Crafting</option>
+                                <option value="culture">Culture</option>
+                                <option value="insight">Insight</option>
+                                <option value="investigation">Investigation</option>
+                                <option value="kriology">Kriology</option>
+                                <option value="melee weapons">Melee Weapons</option>
+                                <option value="medicine">Medicine</option>
                                 <option value="misdirection">Misdirection</option>
-                                <option value="physical skills">Physical Skills</option>
+                                <option value="nature">Nature</option>
+                                <option value="performance">Performance</option>
+                                <option value="persuasion">Persuasion</option>
                                 <option value="ranged weapons">Ranged Weapons</option>
-                                <option value="scholar">Scholar</option>
-                                <option value="scoundrel">Scoundrel</option>
-                                <option value="scouting">Scouting</option>
                                 <option value="spellcasting">Spellcasting</option>
-                                <option value="wilderness">Wilderness</option>
+                                <option value="stealth">Stealth</option>
+                                <option value="survival">Survival</option>
                             </select>
                             <button type="button" onclick="InputFunctions.AddSkillInput()">Proficient</button>
                             <button type="button" onclick="InputFunctions.AddSkillInput(' (ex)')">Expert</button>
