Add low-light vision field to senses

--- a/index.html
+++ b/index.html
@@ -367,17 +367,21 @@
                     <tr>
                         <td>
                             <label for="blindsight-input">Blindsight: <input type="number" id="blindsight-input" min="0"
-                                    max="995" step="5" value="0" onchange="FormFunctions.ShowHideBlindBox()">
+                                    max="995" step="1" value="0" onchange="FormFunctions.ShowHideBlindBox()">
                                 m.</label><br>
                             <div id="blind-box-note" class="box-note"><label for="blindness-input">(Blind beyond: <input
                                         type="checkbox" id="blindness-input">)</label></div>
                         </td>
+                        <td><label for="lowlightvision-input">Low-light Vision: <input type="number" id="lowlightvision-input" min="0" max="995" step="1"
+                                    value="0"> m.</label></td>
                         <td><label for="darkvision-input">Darkvision: <input type="number" id="darkvision-input" min="0"
-                                    max="995" step="5" value="0"> m.</label></td>
+                                    max="995" step="1" value="0"> m.</label></td>
+                    </tr>
+                    <tr>
                         <td><label for="tremorsense-input">Tremorsense: <input type="number" id="tremorsense-input"
-                                    min="0" max="995" step="5" value="0"> m.</label></td>
+                                    min="0" max="995" step="1" value="0"> m.</label></td>
                         <td><label for="truesight-input">Truesight: <input type="number" id="truesight-input" min="0"
-                                    max="995" step="5" value="0"> m.</label></td>
+                                    max="995" step="1" value="0"> m.</label></td>
                     </tr>
                 </table>
                 <br>
