Update skill list

--- a/index.html
+++ b/index.html
@@ -242,20 +242,21 @@
                             <label for="skills-input">Skills:</label><br>
                             <select id="skills-input">
                                 <option value=""></option>
-                                <option value="awe">Awe</option>
-                                <option value="animal interaction">Animal Interaction</option>
                                 <option value="arcana">Arcana</option>
                                 <option value="athletics">Athletics</option>
                                 <option value="awareness">Awareness</option>
+                                <option value="awe">Awe</option>
+                                <option value="bonding">Bonding</option>
                                 <option value="burglary">Burglary</option>
                                 <option value="concealable weapons">Concealable Weapons</option>
+                                <option value="counterspelling">Counterspelling</option>
                                 <option value="crafting">Crafting</option>
                                 <option value="culture">Culture</option>
                                 <option value="insight">Insight</option>
                                 <option value="investigation">Investigation</option>
-                                <option value="kriology">Kriology</option>
-                                <option value="melee weapons">Melee Weapons</option>
+                                <option value="kri">Kri</option>
                                 <option value="medicine">Medicine</option>
+                                <option value="melee weapons">Melee Weapons</option>
                                 <option value="misdirection">Misdirection</option>
                                 <option value="nature">Nature</option>
                                 <option value="performance">Performance</option>
@@ -263,7 +264,7 @@
                                 <option value="ranged weapons">Ranged Weapons</option>
                                 <option value="spellcasting">Spellcasting</option>
                                 <option value="stealth">Stealth</option>
-                                <option value="survival">Survival</option>
+                                <option value="wilderness">Wilderness</option>
                             </select>
                             <label for="skills-value">Value: <input type="number" id="skills-value" min="0" value=""></label>
                             <button type="button" onclick="InputFunctions.AddSkillInput()">Add</button>
