Update perception skill to precision

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                                     <h4>AGI</h4>
                                     <p id="agipts"></p>
                                 </div> <!-- scores agility -->
-                                <div class="scores-perception">
-                                    <h4>PER</h4>
-                                    <p id="perpts"></p>
-                                </div> <!-- scores perception -->
+                                <div class="scores-precision">
+                                    <h4>PRE</h4>
+                                    <p id="prepts"></p>
+                                </div> <!-- scores precision -->
                                 <div class="scores-constitution">
                                     <h4>CON</h4>
                                     <p id="conpts"></p>
@@ -227,7 +227,7 @@
                     <tr>
                         <td><label for="str-input">STR: <br><input type="number" id="str-input" min="1" max="99" value="5"></label></td>
                         <td><label for="agi-input">AGI: <br><input type="number" id="agi-input" min="1" max="99" value="5"></label></td>
-                        <td><label for="per-input">PER: <br><input type="number" id="per-input" min="1" max="99" value="5"></label></td>
+                        <td><label for="pre-input">PRE: <br><input type="number" id="pre-input" min="1" max="99" value="5"></label></td>
                         <td><label for="con-input">CON: <br><input type="number" id="con-input" min="1" max="99" value="5"></label></td>
                         <td><label for="int-input">INT: <br><input type="number" id="int-input" min="1" max="99" value="5"></label></td>
                         <td><label for="ins-input">INS: <br><input type="number" id="ins-input" min="1" max="99" value="5"></label></td>
