--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
                                 <h4>Hit Points</h4>
                                 <p id="hit-points"></p>
                             </div> <!-- property line -->
+                            <div class="property-line">
+                                <h4>Resolve</h4>
+                                <p id="res-points"></p>
+                            </div> <!-- property line -->
                             <div class="property-line last">
                                 <h4>Speed</h4>
                                 <p id="speed"></p>
@@ -93,6 +97,10 @@
                                     <h4>AFF</h4>
                                     <p id="affpts"></p>
                                 </div> <!-- scores affinity -->
+                                <div class="scores-willpower">
+                                    <h4>WIL</h4>
+                                    <p id="wilpts"></p>
+                                </div> <!-- scores willpower -->
                             </div> <!-- scores -->
                             <svg height="5" width="100%" class="tapered-rule">
                                 <polyline points="0,0 400,2.5 0,5"></polyline>
@@ -185,6 +193,11 @@
                                         id="hp-custom-input" type="number" min="0"></label></div>
                             <div class="box-note">Leave empty to calculate health automatically.</div>
                         <td>
+                        <td>
+                            <div id="res-custom-input-prompt"><label for="res-custom-input">Resolve:<br><input id="res-custom-input"
+                                        type="number" min="0"></label></div>
+                            <div class="box-note">Leave empty to calculate resolve automatically.</div>
+                        <td>
                             <label for="armor-input">Armor Value: <br>
                                 <input id="armor-input" type="number" min="0" max="99"></label>
                         </td>
@@ -233,6 +246,7 @@
                         <td><label for="ins-input">INS: <br><input type="number" id="ins-input" min="1" max="99" value="5"></label></td>
                         <td><label for="cha-input">CHA: <br><input type="number" id="cha-input" min="1" max="99" value="5"></label></td>
                         <td><label for="aff-input">AFF: <br><input type="number" id="aff-input" min="1" max="99" value="5"></label></td>
+                        <td><label for="wil-input">WIL: <br><input type="number" id="wil-input" min="1" max="99" value="5"></label></td>
                     </tr>
                 </table>
                 <hr>
