Rename hit points/health to endurance

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <p id="armor-class"></p>
                             </div> <!-- property line -->
                             <div class="property-line">
-                                <h4>Hit Points</h4>
+                                <h4>Endurance</h4>
                                 <p id="hit-points"></p>
                             </div> <!-- property line -->
                             <div class="property-line">
@@ -189,9 +189,9 @@
                             <div id="size-hit-die" class="box-note">Hit Die: 6</div>
                         </td>
                         <td>
-                            <div id="hp-custom-input-prompt"><label for="hp-custom-input">Hit Points:<br><input
+                            <div id="hp-custom-input-prompt"><label for="hp-custom-input">Endurance:<br><input
                                         id="hp-custom-input" type="number" min="0"></label></div>
-                            <div class="box-note">Leave empty to calculate health automatically.</div>
+                            <div class="box-note">Leave empty to calculate endurance automatically.</div>
                         <td>
                         <td>
                             <div id="res-custom-input-prompt"><label for="res-custom-input">Resolve:<br><input id="res-custom-input"
